homework/week8/httpserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
  labels:
      app: httpserver
spec:
  replicas: 1
  selector:
      matchLabels:
          app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
      - name: httpserver
        image: quay.io/zxiong/httpservertest:latest
        ports:
        - containerPort: 8089
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100M
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8089
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8089
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 3
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  ports:
    - name: http
      port: 8089
      protocol: TCP
      targetPort: 8089
  selector:
    app: httpserver
