homework/week8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: http-server
